vlib/v/parser/tests/fn_param_name_cap.vv
type Type = int

// OK
fn f(Type)

fn g<T>(T v) {
	
}

g(5)
